@@ -24,18 +24,18 @@ public class DateWeekHandlerTester extends TestCase {
 	 * @throws Exception
 	 */
 	public void testHandleProperty() throws Exception{
-		
+
 		PropertyHandler propertyHandler = new DateWeekHandler();
-		Calendar calendar = Calendar.getInstance();		
+		Calendar calendar = Calendar.getInstance();
 		Date dt = new Date();
 		calendar.setTime(dt);
-		
+
 		calendar.set(Calendar.YEAR, 2008);
 		calendar.set(Calendar.MONTH, Calendar.MARCH);
 		calendar.set(Calendar.DAY_OF_MONTH, 3);
-		
-		assertEquals(Integer.valueOf(Calendar.MONDAY), 
+
+		assertEquals(new Integer(Calendar.MONDAY),
 				propertyHandler.getProperty(calendar.getTime()));
-		
+
 	}
 }
