@@ -24,16 +24,16 @@ public class DayOfYearHandlerTester extends TestCase {
 	 * @throws Exception
 	 */
 	public void testHandleProperty() throws Exception{
-		
+
 		PropertyHandler propertyHandler = new DayOfYearHandler();
-		Calendar calendar = Calendar.getInstance();		
+		Calendar calendar = Calendar.getInstance();
 		Date dt = new Date();
 		calendar.setTime(dt);
-		
+
 		calendar.set(Calendar.YEAR, 2008);
 		calendar.set(Calendar.MONDAY, Calendar.FEBRUARY);
 		calendar.set(Calendar.DAY_OF_MONTH, 29);
-		
-		assertEquals(Integer.valueOf(60), propertyHandler.getProperty(calendar.getTime()));
+
+		assertEquals(new Integer(60), propertyHandler.getProperty(calendar.getTime()));
 	}
 }
